# njord

./: .gitignore  MANIFEST  README.md  base.py  bgccsm.py  environment.yml  figpref.py  gompom.py  jpl.py  nasa.py  ncep.py  pyproject.toml  rutgers.py  setup.py  topaz.py
njord/: __init__.py  avhrr.py  base.py  bem.py  bgccsm.py  cci.py  cesm.py  config.py  ecco.py  gebco.py  ghrsst.py  globcolour.py  gmtgrid.py  gompom.py  hycom.py  jpl.py  landmask.py  llinterp.py  mati.py  mldclim.py  nasa.py  ncep.py  njord.cfg  oscar.py  poseidon.py  rutgers.py  smos.py  strang.py  topaz.py  winds.py  woa.py  worldclim.py
njord/ecoregions/: __init__.py  fay_mckinley.py  longhurst.py  longhurst_geopandas.py  ogr2array.py
njord/ecoregions/data/: Longhurst_definitions.csv
njord/fileio/: __init__.py
njord/utils/: anim.py  figpref.py  geostat.py  grid.py  lldist.py  mpl_dates.py  mycolor.py  time.py  units.py  yrday.py
tests/: test_individual_classes.py  test_time_methods.py
