[tool.poetry]
name = "njord"
version = "0.7.2"
description = "Retrieve and manipulate gridded geophysical fields"
authors = ["Bror Jonsson <brorfred@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
xarray = " ^0.14"
projmap = ">0.84.0"
matplotlib = "^3.1"
click = "^7.0"
six = "^1.13"
bs4 = "^0.0.1"
netcdf4 = "^1.5"
pydap = "^3.2"
requests = "^2.22"

[tool.poetry.dev-dependencies]
ipython = "^7.9"
pytest = "^5.2"
pytest-coverage = "^0.0.0"
pytest-sugar = "^0.9.2"
pytest-remotedata = "^0.3.2"
pytest-picked = "^0.4.1"
pytest-spec = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
